# sguard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  log4rs.yaml  routes.yaml
sguard/: Cargo.toml
sguard-core/: Cargo.toml
sguard-core/src/: error.rs  filter.rs  http.rs  lib.rs
sguard-core/src/model/: context.rs  core.rs  mod.rs  route.rs
sguard-error/: Cargo.toml
sguard-error/src/: lib.rs
sguard-filter/: Cargo.toml  Readme.md
sguard-filter/src/: auth.rs  core.rs  exception.rs  filter_chain.rs  http.rs  lib.rs  logging.rs  middleware.rs  operation.rs  pipeline.rs  routing.rs  security.rs  session.rs  upstream.rs
sguard-filter/src/auth/: basic.rs  ldap.rs  mod.rs  oauth2.rs  saml.rs
sguard-http/: Cargo.toml
sguard-http/src/: app.rs  lib.rs  upstream.rs
sguard-proxy/: Cargo.toml
sguard-proxy/src/: lib.rs  proxy_trait.rs  state_machine.rs  upstream.rs
sguard-routing/: Cargo.toml
sguard-routing/src/: factory.rs  filter.rs  lib.rs  route.rs  service.rs
sguard-routing/src/resolver/: cookie_based_resolver.rs  host_based_resolver.rs  mod.rs  path_based_resolver.rs  query_based_resolver.rs  regex_based_resolver.rs
sguard/src/: main.rs
test/performance/: payload.json  post.lua  run.sh
