[package]
name = "sguard-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sguard-error = { version = "0.1.0", path = "../sguard-error" }
http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
pin-project-lite = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
serde_json = "1.0"
http-body = { workspace = true }