[package]
name = "sguard-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
sguard-error = { version = "0.1.0", path = "../sguard-error" }
sguard-proxy = { version = "0.1.0", path = "../sguard-proxy" }
sguard-core = { version = "0.1.0", path= "../sguard-core", default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
