[package]
name = "sguard-http"
version = "0.1.0"
edition = "2021"

[dependencies]
http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
sguard-filter = { version = "0.1.0", path = "../sguard-filter", default-features = false }
sguard-error = { version = "0.1.0", path = "../sguard-error", default-features = false }
sguard-core = { version = "0.1.0", path = "../sguard-core", default-features = false }
sguard-proxy = { version = "0.1.0", path = "../sguard-proxy", default-features = false }
sguard-routing = { version = "0.1.0", path = "../sguard-routing", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
