[package]
name = "sguard-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
sguard-core = { version = "0.1.0", path = "../sguard-core", default-features = false }
sguard-error = { version = "0.1.0", path = "../sguard-error", default-features = false }
log = { workspace = true }
hyper = { workspace = true }
hyper-util.workspace = true
bytes.workspace = true
hyper-tls.workspace = true
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
